# Project_T

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_LOG.md  README.md  all_project_code.txt  architecture.md  collect_code.sh  local_notes.md  overview.md
client/: Cargo.toml  README.md  architecture.md  index.html  overview.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js
client/docs/: client-files.md
client/src/: App.css  App.tsx  api.ts  app.rs  data.ts  icons.tsx  index.css  main.rs  notifications.ts  types.ts  utils.ts  websocket.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: main.rs
client/src/components/auth/: AuthScreen.tsx
client/src/components/calls/: CallOverlay.tsx  CallsView.tsx  IncomingCallModal.tsx  SharedMediaPanel.tsx
client/src/components/chat/: AudioPlayer.tsx  ChatInfoPanel.tsx  ChatListPanel.tsx  ChatSecurityBanner.tsx  ChatView.tsx  EmptyState.tsx  ForwardModal.tsx  InputBar.tsx  MessageBubble.tsx  NewChatModal.tsx  UserProfilePanel.tsx  VoicePlayerBar.tsx
client/src/components/nav/: NavRail.tsx
client/src/components/settings/: SettingsView.tsx
client/src/components/ui/: Avatar.tsx  AvatarGallery.tsx  Badge.tsx  Toast.tsx  (+8 more)
client/src/crypto/: index.ts  keystore.ts
client/src/hooks/: useAuth.ts  useCall.ts  useChats.ts  useCrypto.ts  useToast.ts  useUsers.ts
client/src/store/: useAudioStore.ts  useAuthStore.ts  useCallStore.ts  useChatStore.ts  useUiStore.ts
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
deploy/coturn/: docker-compose.yml  turnserver.conf
docs/: setup.md
server/: Cargo.toml  Dockerfile
server/migrations/: 0001_init.sql  0002_attachments.sql  0003_user_avatars.sql  0004_e2e_keys.sql  0005_chat_keys.sql  0006_profile_bio_avatar_history.sql  0007_reply_forward.sql  0008_channels_pins.sql  0009_read_receipts.sql  0010_chat_avatars.sql
server/src/: app.rs  config.rs  db.rs  error.rs  main.rs  models.rs  state.rs
server/src/api/: auth.rs  chats.rs  files.rs  invites.rs  messages.rs  mod.rs  profile.rs  users.rs
server/src/crypto/: jwt.rs  password.rs
server/src/models/: attachment.rs  avatar_history.rs  chat.rs  invite.rs  message.rs  mod.rs  user.rs
server/src/ws/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
