[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs"] }
tower-http = { version = "0.5", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", "postgres",
    "uuid", "chrono", "json", "migrate"
] }

argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

futures = "0.3"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }